<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.tipcalculator.TipCalculatorActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pct10btn"
        android:layout_alignParentTop="true"
        android:text="@string/inputamtLabel"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/amttotaled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pct10btn"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/inputamtLabel" >
       
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/pct10btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amttotaled"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/tenPercent" />

    <Button
        android:id="@+id/pct15btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pct10btn"
        android:layout_alignBottom="@+id/pct10btn"
        android:layout_toRightOf="@+id/pct10btn"
        android:text="@string/fifteenpct" />

    <Button
        android:id="@+id/pct20btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pct10btn"
        android:layout_alignBottom="@+id/pct10btn"
        android:layout_toRightOf="@+id/pct15btn"
        android:text="@string/twentypct" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tiptotalView"
        android:layout_alignLeft="@+id/pct10btn"
        android:layout_marginBottom="30dp"
        android:text="@string/tiplabel"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tiptotalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pct10btn"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:textSize="20sp" />

</RelativeLayout>